# labProgrammazione

./: CMakeLists.txt  Collection.cpp  Collection.h  ImportantNotes.cpp  ImportantNotes.h  Note.cpp  Note.h  NotesCollection.cpp  NotesCollection.h  Observer.cpp  Observer.h  README.md  Subject.cpp  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ImportantNotesTest.cpp  NoteTest.cpp  NotesCollectionTest.cpp  UserTest.cpp  runAllTest.cpp  runAllTests.cpp
